--- a/year_2014.md
+++ b/year_2014.md
@@ -1,85 +1,85 @@
 # 2014
 82 items
 
-* [Archaeology How Did The Remains Of Ancient Societies End Up In Stratified Layers Below The Surface Of The Ground?](2014\archaeology-how-did-the-remains-of-ancient-societies-end-up-in-stratified-layers-below-the-surface-of-the-ground.md)
-* [Are There Any Ancient Cultures That Did Not Use Fermentation As Part Of Their Culinary Customs And Techniques?](2014\are-there-any-ancient-cultures-that-did-not-use-fermentation-as-part-of-their-culinary-customs-and-techniques.md)
-* [Are There Any Good English Language Books About The Wars Of The Diadochi?](2014\are-there-any-good-english-language-books-about-the-wars-of-the-diadochi.md)
-* [B'Who Were The Greatest Roman Poets'?](2014\b'who-were-the-greatest-roman-poets'.md)
-* [Besides The Years Proceeding The Persian Wars In 479 Bc And Preceding The Peloponnesian War Was Athens Ever In Control Of Hellas More Than Sparta?](2014\besides-the-years-proceeding-the-persian-wars-in-479-bc-and-preceding-the-peloponnesian-war-was-athens-ever-in-control-of-hellas-more-than-sparta.md)
-* [Between 431 And 362 B C Athens Sparta And Thebes Each Tried To Impose Hegemony Over The City States Of Greece But None Succeeded Except For A Short Period Of Time Why Did Each State Fail What Are The Components Of Successful Rule?](2014\between-431-and-362-b-c-athens-sparta-and-thebes-each-tried-to-impose-hegemony-over-the-city-states-of-greece-but-none-succeeded-except-for-a-short-period-of-time-why-did-each-state-fail-what-are-the-components-of-successful-rule.md)
-* [Can Webgl Be Used For Making Animation Movies Instead Of Maya Python?](2014\can-webgl-be-used-for-making-animation-movies-instead-of-maya-python.md)
-* [Did Archeology Or Systematic Historical Research Exist In Earlier Civilisations Like Egypt Or Rome?](2014\did-archeology-or-systematic-historical-research-exist-in-earlier-civilisations-like-egypt-or-rome.md)
-* [Did Slave Owning Help The Economy Of The Ancient World Or Slow It Down?](2014\did-slave-owning-help-the-economy-of-the-ancient-world-or-slow-it-down.md)
-* [Did The Ancient Romans Or Greeks Or Any Ancient Cultures Have A Concept Of Awkwardness?](2014\did-the-ancient-romans-or-greeks-or-any-ancient-cultures-have-a-concept-of-awkwardness.md)
-* [Did The Iliad And The Odyssey Really Happen?](2014\did-the-iliad-and-the-odyssey-really-happen.md)
-* [Did The Romans Abandon The Antonine Wall In Whats Now Scotland Because It Was Easy To Get Around By Sea?](2014\did-the-romans-abandon-the-antonine-wall-in-whats-now-scotland-because-it-was-easy-to-get-around-by-sea.md)
-* [Did The Romans Ever Use The Greek Auxiliaries Or Utilize The Hellenistic Phalanx Tactics?](2014\did-the-romans-ever-use-the-greek-auxiliaries-or-utilize-the-hellenistic-phalanx-tactics.md)
-* [Do Game Developers Prefer Creating Mobile Games To Pc Or Console Games?](2014\do-game-developers-prefer-creating-mobile-games-to-pc-or-console-games.md)
-* [Do Western Cultures Or Civilizations Also Have Concepts Of Concubines And Eunuchs Like Chinas?](2014\do-western-cultures-or-civilizations-also-have-concepts-of-concubines-and-eunuchs-like-chinas.md)
-* [Does Ironpython Work With Any Of The Cross Platform Python Gui Modules Packages?](2014\does-ironpython-work-with-any-of-the-cross-platform-python-gui-modules-packages.md)
-* [Gladiators Were There Moral Objections To The Gladiatorial Games In Ancient Rome?](2014\gladiators-were-there-moral-objections-to-the-gladiatorial-games-in-ancient-rome.md)
-* [Greek History Why Were The People Of Helos Enslaved?](2014\greek-history-why-were-the-people-of-helos-enslaved.md)
-* [Has Technology From Ancient Civilizations Influenced Our Own Modern Technology?](2014\has-technology-from-ancient-civilizations-influenced-our-own-modern-technology.md)
-* [How Are The Findings And Methods Of Claude Levi Strauss Viewed By Contemporary Anthropologists?](2014\how-are-the-findings-and-methods-of-claude-levi-strauss-viewed-by-contemporary-anthropologists.md)
-* [How Did California Become Home To Silicon Valley Why Is It Not In Any Other State?](2014\how-did-california-become-home-to-silicon-valley-why-is-it-not-in-any-other-state.md)
-* [How Did The Roman Empire Function At Its Peak How Did It Govern Its Vast Empire Including Many Different Groups Of People?](2014\how-did-the-roman-empire-function-at-its-peak-how-did-it-govern-its-vast-empire-including-many-different-groups-of-people.md)
-* [How Did The Romans Pull Off Great Construction Projects Using Their Roman Numeral Number System?](2014\how-did-the-romans-pull-off-great-construction-projects-using-their-roman-numeral-number-system.md)
-* [How Did The Romans Write Question And Exclamation Marks In Latin?](2014\how-did-the-romans-write-question-and-exclamation-marks-in-latin.md)
-* [How Did The Spartan Empire Fall?](2014\how-did-the-spartan-empire-fall.md)
-* [How Do I Execute Maya Script Without Lauching Maya?](2014\how-do-i-execute-maya-script-without-lauching-maya.md)
-* [How Do I Make A Table From A Dictionary And Manipulate The Values In Python?](2014\how-do-i-make-a-table-from-a-dictionary-and-manipulate-the-values-in-python.md)
-* [How Do Maya And 3Ds Max Compare What Are The Advantages And Disadvantages In Quality Usability And Features?](2014\how-do-maya-and-3ds-max-compare-what-are-the-advantages-and-disadvantages-in-quality-usability-and-features.md)
-* [How Do You Explain Diplomacy To A Person Who Doesnt Understand History Or Anything Between War And Most Favored Nation Trade Status?](2014\how-do-you-explain-diplomacy-to-a-person-who-doesnt-understand-history-or-anything-between-war-and-most-favored-nation-trade-status.md)
-* [How Hard Can Writing A Book Based In The 18Th Century Be?](2014\how-hard-can-writing-a-book-based-in-the-18th-century-be.md)
-* [How Much Evidence Exists On The Question Of Whether Or Not The Ancient Trojans Were The Founders Of Rome?](2014\how-much-evidence-exists-on-the-question-of-whether-or-not-the-ancient-trojans-were-the-founders-of-rome.md)
-* [How Much Were The Rules For Not Killing Messengers Adhered To In Olden Times?](2014\how-much-were-the-rules-for-not-killing-messengers-adhered-to-in-olden-times.md)
-* [How Much Would It Cost To Construct A Replica Of The Great Pyramid Of Giza In Arizona Using Modern Construction Methods?](2014\how-much-would-it-cost-to-construct-a-replica-of-the-great-pyramid-of-giza-in-arizona-using-modern-construction-methods.md)
-* [How Was It For The Population Of The Former Western Roman Empire Italy Africa And Spain To Be Once Again A Part Of The Roman Empire With The Great Reconquests Of Justinian?](2014\how-was-it-for-the-population-of-the-former-western-roman-empire-italy-africa-and-spain-to-be-once-again-a-part-of-the-roman-empire-with-the-great-reconquests-of-justinian.md)
-* [How Were Dates Recorded During The Roman Empire?](2014\how-were-dates-recorded-during-the-roman-empire.md)
-* [I Want To Be An Indie Game Developer Designer I Just Turned 30 Is It Too Late For Me To Learn New Tools Like Unity?](2014\i-want-to-be-an-indie-game-developer-designer-i-just-turned-30-is-it-too-late-for-me-to-learn-new-tools-like-unity.md)
-* [If Marcus Agrippa Had Lived To Become Emperor Would The Roman Empire Have Survived Into The Middle Ages?](2014\if-marcus-agrippa-had-lived-to-become-emperor-would-the-roman-empire-have-survived-into-the-middle-ages.md)
-* [Im Well Aware Of The Pitfalls Of Javascript But Is There Anything You Can Do Much Better More Efficiently In Javascript Than In Other Languages?](2014\im-well-aware-of-the-pitfalls-of-javascript-but-is-there-anything-you-can-do-much-better-more-efficiently-in-javascript-than-in-other-languages.md)
-* [Is Python Difficult Just For Me Is It Always Hard At The Beginning How Can I Get Better Should I Just Repeat What We Do In School Over And Over?](2014\is-python-difficult-just-for-me-is-it-always-hard-at-the-beginning-how-can-i-get-better-should-i-just-repeat-what-we-do-in-school-over-and-over.md)
-* [Is There A Bias Towards Ancient Greek Intellectual Achievement Over Say Egyptian Intellectual Achievements And Thinkers In Terms Of Human Intellectual Achievement Did Greece Surpass Egypt Is There An Inherent Western Bias At Play?](2014\is-there-a-bias-towards-ancient-greek-intellectual-achievement-over-say-egyptian-intellectual-achievements-and-thinkers-in-terms-of-human-intellectual-achievement-did-greece-surpass-egypt-is-there-an-inherent-western-bias-at-play.md)
-* [Python Desktop Development Vs Native Windows App In Wpf?](2014\python-desktop-development-vs-native-windows-app-in-wpf.md)
-* [Was Genghis Khan The Pioneer In Mounted Archers Or Maybe The Parthians As In The Parthian Shot Or Any Other?](2014\was-genghis-khan-the-pioneer-in-mounted-archers-or-maybe-the-parthians-as-in-the-parthian-shot-or-any-other.md)
-* [Was The Emperor Philip The Arab An Arabian Person Or Was He Just A Roman Person And Took This Name Only Because His Birth Place Is In The Arabia Petraea?](2014\was-the-emperor-philip-the-arab-an-arabian-person-or-was-he-just-a-roman-person-and-took-this-name-only-because-his-birth-place-is-in-the-arabia-petraea.md)
-* [Was The Old Roman Empire Evil?](2014\was-the-old-roman-empire-evil.md)
-* [Were Any Of The Parthian Kings Actually Of Partial Ethnic Greek Descent?](2014\were-any-of-the-parthian-kings-actually-of-partial-ethnic-greek-descent.md)
-* [Were Hoplites Proficient In Close Quarters Combat Outside Of The Phalanx Formation Or Were They Entirely Dependent On That Formation To Remain An Effective Fighting Force?](2014\were-hoplites-proficient-in-close-quarters-combat-outside-of-the-phalanx-formation-or-were-they-entirely-dependent-on-that-formation-to-remain-an-effective-fighting-force.md)
-* [Were There Hindus Living In The Middle East Or Beyond During The Time Of Jesus Or The Roman Empire?](2014\were-there-hindus-living-in-the-middle-east-or-beyond-during-the-time-of-jesus-or-the-roman-empire.md)
-* [What Ancient Roman Or Greek Preferably Books Are There That Talk About Subsaharan Africans?](2014\what-ancient-roman-or-greek-preferably-books-are-there-that-talk-about-subsaharan-africans.md)
-* [What Are Killer Python Tips Which Could Make Our Coder Lives More Productive Easier And Happier?](2014\what-are-killer-python-tips-which-could-make-our-coder-lives-more-productive-easier-and-happier.md)
-* [What Are Major Differences Between Greek And Roman Culture Or Government?](2014\what-are-major-differences-between-greek-and-roman-culture-or-government.md)
-* [What Are Some Methods In Python Dictionary?](2014\what-are-some-methods-in-python-dictionary.md)
-* [What Are Some Places Where You Learned About Python Internals Well?](2014\what-are-some-places-where-you-learned-about-python-internals-well.md)
-* [What Are The Cultural Stereotypes From The Various Provinces Of The Roman Empire?](2014\what-are-the-cultural-stereotypes-from-the-various-provinces-of-the-roman-empire.md)
-* [What Are The Top 5 Cities To Be A Cg Artist In?](2014\what-are-the-top-5-cities-to-be-a-cg-artist-in.md)
-* [What Caused The Bronze Age Collapse?](2014\what-caused-the-bronze-age-collapse.md)
-* [What Did Prehistoric Or Ancient Peoples Think Of Aurorae?](2014\what-did-prehistoric-or-ancient-peoples-think-of-aurorae.md)
-* [What Did The Greeks Think Know About The Ethiopians?](2014\what-did-the-greeks-think-know-about-the-ethiopians.md)
-* [What Impact Has Philosophy Had On The Greek Language?](2014\what-impact-has-philosophy-had-on-the-greek-language.md)
-* [What Is A Good Niche To Start My Videogame Company?](2014\what-is-a-good-niche-to-start-my-videogame-company.md)
-* [What Is The Most Plausible And Cheapest Way To Teach My Six Year Old Child How To Make A Video Game Or Even Some Programming?](2014\what-is-the-most-plausible-and-cheapest-way-to-teach-my-six-year-old-child-how-to-make-a-video-game-or-even-some-programming.md)
-* [What Is The Significance Of Multiples Of Six In Classical Literature?](2014\what-is-the-significance-of-multiples-of-six-in-classical-literature.md)
-* [What Motivates Technical Writers Is It The Opportunity To Write About Cool Technology The Money Helping Users Or Something Else Completely?](2014\what-motivates-technical-writers-is-it-the-opportunity-to-write-about-cool-technology-the-money-helping-users-or-something-else-completely.md)
-* [What Roman Technological Feats And Achievements Had Been Rediscovered By Europeans At The Beginning Of The Late Middle Ages?](2014\what-roman-technological-feats-and-achievements-had-been-rediscovered-by-europeans-at-the-beginning-of-the-late-middle-ages.md)
-* [What Was The First Form Of Taxes And How Was Public Perception Of It At That Time?](2014\what-was-the-first-form-of-taxes-and-how-was-public-perception-of-it-at-that-time.md)
-* [What Was The Level Of Literacy Among The People Of The Roman Empire First To Third Centuries Ad If Only The Wealthy Were Literate What Was The Point Of The Written Propaganda On The Ancient Monuments?](2014\what-was-the-level-of-literacy-among-the-people-of-the-roman-empire-first-to-third-centuries-ad-if-only-the-wealthy-were-literate-what-was-the-point-of-the-written-propaganda-on-the-ancient-monuments.md)
-* [What Were The Cultural Differences And Similarities Between Ancient Greece And Rome?](2014\what-were-the-cultural-differences-and-similarities-between-ancient-greece-and-rome.md)
-* [What Were The Legal Bases For The Powers Of The Roman Emperor?](2014\what-were-the-legal-bases-for-the-powers-of-the-roman-emperor.md)
-* [What Would Be The Best Empire To Live Under In Ancient Times?](2014\what-would-be-the-best-empire-to-live-under-in-ancient-times.md)
-* [What Would Happen If A Magical Community Were To Reveal Themselves In The 1990S?](2014\what-would-happen-if-a-magical-community-were-to-reveal-themselves-in-the-1990s.md)
-* [Where Can I Find A Good Source On Ancient Warfare?](2014\where-can-i-find-a-good-source-on-ancient-warfare.md)
-* [Where Can I Find Code Examples Of Video Games Developed In C?](2014\where-can-i-find-code-examples-of-video-games-developed-in-c.md)
-* [Where Do I Start Reading History If I Want To Know About Dynasties Rulers Kings And Kingdoms?](2014\where-do-i-start-reading-history-if-i-want-to-know-about-dynasties-rulers-kings-and-kingdoms.md)
-* [Which Ancient Civilization Region Of Civilization Or Empire Fascinates You The Most Why?](2014\which-ancient-civilization-region-of-civilization-or-empire-fascinates-you-the-most-why.md)
-* [Who Bungled The Seattle Monorail?](2014\who-bungled-the-seattle-monorail.md)
-* [Who Does The His In History Refer To God Or A Human?](2014\who-does-the-his-in-history-refer-to-god-or-a-human.md)
-* [Who Is Gilgamesh?](2014\who-is-gilgamesh.md)
-* [Who Was The Laziest Person In The History Of Mankind?](2014\who-was-the-laziest-person-in-the-history-of-mankind.md)
-* [Who Were The Greatest Roman Poets?](2014\who-were-the-greatest-roman-poets.md)
-* [Why Did Rome Destroy Carthage?](2014\why-did-rome-destroy-carthage.md)
-* [Why Do Archeologists Think That The Trojan War Happened?](2014\why-do-archeologists-think-that-the-trojan-war-happened.md)
-* [Why Is There A Lack Of Biographical Descriptions Of Historical Figures?](2014\why-is-there-a-lack-of-biographical-descriptions-of-historical-figures.md)
-* [Why Were The Greeks Unable To Resist The Invasion By The Romans?](2014\why-were-the-greeks-unable-to-resist-the-invasion-by-the-romans.md)
+* [Archaeology How Did The Remains Of Ancient Societies End Up In Stratified Layers Below The Surface Of The Ground?](2014/archaeology-how-did-the-remains-of-ancient-societies-end-up-in-stratified-layers-below-the-surface-of-the-ground.md)
+* [Are There Any Ancient Cultures That Did Not Use Fermentation As Part Of Their Culinary Customs And Techniques?](2014/are-there-any-ancient-cultures-that-did-not-use-fermentation-as-part-of-their-culinary-customs-and-techniques.md)
+* [Are There Any Good English Language Books About The Wars Of The Diadochi?](2014/are-there-any-good-english-language-books-about-the-wars-of-the-diadochi.md)
+* [B'Who Were The Greatest Roman Poets'?](2014/b'who-were-the-greatest-roman-poets'.md)
+* [Besides The Years Proceeding The Persian Wars In 479 Bc And Preceding The Peloponnesian War Was Athens Ever In Control Of Hellas More Than Sparta?](2014/besides-the-years-proceeding-the-persian-wars-in-479-bc-and-preceding-the-peloponnesian-war-was-athens-ever-in-control-of-hellas-more-than-sparta.md)
+* [Between 431 And 362 B C Athens Sparta And Thebes Each Tried To Impose Hegemony Over The City States Of Greece But None Succeeded Except For A Short Period Of Time Why Did Each State Fail What Are The Components Of Successful Rule?](2014/between-431-and-362-b-c-athens-sparta-and-thebes-each-tried-to-impose-hegemony-over-the-city-states-of-greece-but-none-succeeded-except-for-a-short-period-of-time-why-did-each-state-fail-what-are-the-components-of-successful-rule.md)
+* [Can Webgl Be Used For Making Animation Movies Instead Of Maya Python?](2014/can-webgl-be-used-for-making-animation-movies-instead-of-maya-python.md)
+* [Did Archeology Or Systematic Historical Research Exist In Earlier Civilisations Like Egypt Or Rome?](2014/did-archeology-or-systematic-historical-research-exist-in-earlier-civilisations-like-egypt-or-rome.md)
+* [Did Slave Owning Help The Economy Of The Ancient World Or Slow It Down?](2014/did-slave-owning-help-the-economy-of-the-ancient-world-or-slow-it-down.md)
+* [Did The Ancient Romans Or Greeks Or Any Ancient Cultures Have A Concept Of Awkwardness?](2014/did-the-ancient-romans-or-greeks-or-any-ancient-cultures-have-a-concept-of-awkwardness.md)
+* [Did The Iliad And The Odyssey Really Happen?](2014/did-the-iliad-and-the-odyssey-really-happen.md)
+* [Did The Romans Abandon The Antonine Wall In Whats Now Scotland Because It Was Easy To Get Around By Sea?](2014/did-the-romans-abandon-the-antonine-wall-in-whats-now-scotland-because-it-was-easy-to-get-around-by-sea.md)
+* [Did The Romans Ever Use The Greek Auxiliaries Or Utilize The Hellenistic Phalanx Tactics?](2014/did-the-romans-ever-use-the-greek-auxiliaries-or-utilize-the-hellenistic-phalanx-tactics.md)
+* [Do Game Developers Prefer Creating Mobile Games To Pc Or Console Games?](2014/do-game-developers-prefer-creating-mobile-games-to-pc-or-console-games.md)
+* [Do Western Cultures Or Civilizations Also Have Concepts Of Concubines And Eunuchs Like Chinas?](2014/do-western-cultures-or-civilizations-also-have-concepts-of-concubines-and-eunuchs-like-chinas.md)
+* [Does Ironpython Work With Any Of The Cross Platform Python Gui Modules Packages?](2014/does-ironpython-work-with-any-of-the-cross-platform-python-gui-modules-packages.md)
+* [Gladiators Were There Moral Objections To The Gladiatorial Games In Ancient Rome?](2014/gladiators-were-there-moral-objections-to-the-gladiatorial-games-in-ancient-rome.md)
+* [Greek History Why Were The People Of Helos Enslaved?](2014/greek-history-why-were-the-people-of-helos-enslaved.md)
+* [Has Technology From Ancient Civilizations Influenced Our Own Modern Technology?](2014/has-technology-from-ancient-civilizations-influenced-our-own-modern-technology.md)
+* [How Are The Findings And Methods Of Claude Levi Strauss Viewed By Contemporary Anthropologists?](2014/how-are-the-findings-and-methods-of-claude-levi-strauss-viewed-by-contemporary-anthropologists.md)
+* [How Did California Become Home To Silicon Valley Why Is It Not In Any Other State?](2014/how-did-california-become-home-to-silicon-valley-why-is-it-not-in-any-other-state.md)
+* [How Did The Roman Empire Function At Its Peak How Did It Govern Its Vast Empire Including Many Different Groups Of People?](2014/how-did-the-roman-empire-function-at-its-peak-how-did-it-govern-its-vast-empire-including-many-different-groups-of-people.md)
+* [How Did The Romans Pull Off Great Construction Projects Using Their Roman Numeral Number System?](2014/how-did-the-romans-pull-off-great-construction-projects-using-their-roman-numeral-number-system.md)
+* [How Did The Romans Write Question And Exclamation Marks In Latin?](2014/how-did-the-romans-write-question-and-exclamation-marks-in-latin.md)
+* [How Did The Spartan Empire Fall?](2014/how-did-the-spartan-empire-fall.md)
+* [How Do I Execute Maya Script Without Lauching Maya?](2014/how-do-i-execute-maya-script-without-lauching-maya.md)
+* [How Do I Make A Table From A Dictionary And Manipulate The Values In Python?](2014/how-do-i-make-a-table-from-a-dictionary-and-manipulate-the-values-in-python.md)
+* [How Do Maya And 3Ds Max Compare What Are The Advantages And Disadvantages In Quality Usability And Features?](2014/how-do-maya-and-3ds-max-compare-what-are-the-advantages-and-disadvantages-in-quality-usability-and-features.md)
+* [How Do You Explain Diplomacy To A Person Who Doesnt Understand History Or Anything Between War And Most Favored Nation Trade Status?](2014/how-do-you-explain-diplomacy-to-a-person-who-doesnt-understand-history-or-anything-between-war-and-most-favored-nation-trade-status.md)
+* [How Hard Can Writing A Book Based In The 18Th Century Be?](2014/how-hard-can-writing-a-book-based-in-the-18th-century-be.md)
+* [How Much Evidence Exists On The Question Of Whether Or Not The Ancient Trojans Were The Founders Of Rome?](2014/how-much-evidence-exists-on-the-question-of-whether-or-not-the-ancient-trojans-were-the-founders-of-rome.md)
+* [How Much Were The Rules For Not Killing Messengers Adhered To In Olden Times?](2014/how-much-were-the-rules-for-not-killing-messengers-adhered-to-in-olden-times.md)
+* [How Much Would It Cost To Construct A Replica Of The Great Pyramid Of Giza In Arizona Using Modern Construction Methods?](2014/how-much-would-it-cost-to-construct-a-replica-of-the-great-pyramid-of-giza-in-arizona-using-modern-construction-methods.md)
+* [How Was It For The Population Of The Former Western Roman Empire Italy Africa And Spain To Be Once Again A Part Of The Roman Empire With The Great Reconquests Of Justinian?](2014/how-was-it-for-the-population-of-the-former-western-roman-empire-italy-africa-and-spain-to-be-once-again-a-part-of-the-roman-empire-with-the-great-reconquests-of-justinian.md)
+* [How Were Dates Recorded During The Roman Empire?](2014/how-were-dates-recorded-during-the-roman-empire.md)
+* [I Want To Be An Indie Game Developer Designer I Just Turned 30 Is It Too Late For Me To Learn New Tools Like Unity?](2014/i-want-to-be-an-indie-game-developer-designer-i-just-turned-30-is-it-too-late-for-me-to-learn-new-tools-like-unity.md)
+* [If Marcus Agrippa Had Lived To Become Emperor Would The Roman Empire Have Survived Into The Middle Ages?](2014/if-marcus-agrippa-had-lived-to-become-emperor-would-the-roman-empire-have-survived-into-the-middle-ages.md)
+* [Im Well Aware Of The Pitfalls Of Javascript But Is There Anything You Can Do Much Better More Efficiently In Javascript Than In Other Languages?](2014/im-well-aware-of-the-pitfalls-of-javascript-but-is-there-anything-you-can-do-much-better-more-efficiently-in-javascript-than-in-other-languages.md)
+* [Is Python Difficult Just For Me Is It Always Hard At The Beginning How Can I Get Better Should I Just Repeat What We Do In School Over And Over?](2014/is-python-difficult-just-for-me-is-it-always-hard-at-the-beginning-how-can-i-get-better-should-i-just-repeat-what-we-do-in-school-over-and-over.md)
+* [Is There A Bias Towards Ancient Greek Intellectual Achievement Over Say Egyptian Intellectual Achievements And Thinkers In Terms Of Human Intellectual Achievement Did Greece Surpass Egypt Is There An Inherent Western Bias At Play?](2014/is-there-a-bias-towards-ancient-greek-intellectual-achievement-over-say-egyptian-intellectual-achievements-and-thinkers-in-terms-of-human-intellectual-achievement-did-greece-surpass-egypt-is-there-an-inherent-western-bias-at-play.md)
+* [Python Desktop Development Vs Native Windows App In Wpf?](2014/python-desktop-development-vs-native-windows-app-in-wpf.md)
+* [Was Genghis Khan The Pioneer In Mounted Archers Or Maybe The Parthians As In The Parthian Shot Or Any Other?](2014/was-genghis-khan-the-pioneer-in-mounted-archers-or-maybe-the-parthians-as-in-the-parthian-shot-or-any-other.md)
+* [Was The Emperor Philip The Arab An Arabian Person Or Was He Just A Roman Person And Took This Name Only Because His Birth Place Is In The Arabia Petraea?](2014/was-the-emperor-philip-the-arab-an-arabian-person-or-was-he-just-a-roman-person-and-took-this-name-only-because-his-birth-place-is-in-the-arabia-petraea.md)
+* [Was The Old Roman Empire Evil?](2014/was-the-old-roman-empire-evil.md)
+* [Were Any Of The Parthian Kings Actually Of Partial Ethnic Greek Descent?](2014/were-any-of-the-parthian-kings-actually-of-partial-ethnic-greek-descent.md)
+* [Were Hoplites Proficient In Close Quarters Combat Outside Of The Phalanx Formation Or Were They Entirely Dependent On That Formation To Remain An Effective Fighting Force?](2014/were-hoplites-proficient-in-close-quarters-combat-outside-of-the-phalanx-formation-or-were-they-entirely-dependent-on-that-formation-to-remain-an-effective-fighting-force.md)
+* [Were There Hindus Living In The Middle East Or Beyond During The Time Of Jesus Or The Roman Empire?](2014/were-there-hindus-living-in-the-middle-east-or-beyond-during-the-time-of-jesus-or-the-roman-empire.md)
+* [What Ancient Roman Or Greek Preferably Books Are There That Talk About Subsaharan Africans?](2014/what-ancient-roman-or-greek-preferably-books-are-there-that-talk-about-subsaharan-africans.md)
+* [What Are Killer Python Tips Which Could Make Our Coder Lives More Productive Easier And Happier?](2014/what-are-killer-python-tips-which-could-make-our-coder-lives-more-productive-easier-and-happier.md)
+* [What Are Major Differences Between Greek And Roman Culture Or Government?](2014/what-are-major-differences-between-greek-and-roman-culture-or-government.md)
+* [What Are Some Methods In Python Dictionary?](2014/what-are-some-methods-in-python-dictionary.md)
+* [What Are Some Places Where You Learned About Python Internals Well?](2014/what-are-some-places-where-you-learned-about-python-internals-well.md)
+* [What Are The Cultural Stereotypes From The Various Provinces Of The Roman Empire?](2014/what-are-the-cultural-stereotypes-from-the-various-provinces-of-the-roman-empire.md)
+* [What Are The Top 5 Cities To Be A Cg Artist In?](2014/what-are-the-top-5-cities-to-be-a-cg-artist-in.md)
+* [What Caused The Bronze Age Collapse?](2014/what-caused-the-bronze-age-collapse.md)
+* [What Did Prehistoric Or Ancient Peoples Think Of Aurorae?](2014/what-did-prehistoric-or-ancient-peoples-think-of-aurorae.md)
+* [What Did The Greeks Think Know About The Ethiopians?](2014/what-did-the-greeks-think-know-about-the-ethiopians.md)
+* [What Impact Has Philosophy Had On The Greek Language?](2014/what-impact-has-philosophy-had-on-the-greek-language.md)
+* [What Is A Good Niche To Start My Videogame Company?](2014/what-is-a-good-niche-to-start-my-videogame-company.md)
+* [What Is The Most Plausible And Cheapest Way To Teach My Six Year Old Child How To Make A Video Game Or Even Some Programming?](2014/what-is-the-most-plausible-and-cheapest-way-to-teach-my-six-year-old-child-how-to-make-a-video-game-or-even-some-programming.md)
+* [What Is The Significance Of Multiples Of Six In Classical Literature?](2014/what-is-the-significance-of-multiples-of-six-in-classical-literature.md)
+* [What Motivates Technical Writers Is It The Opportunity To Write About Cool Technology The Money Helping Users Or Something Else Completely?](2014/what-motivates-technical-writers-is-it-the-opportunity-to-write-about-cool-technology-the-money-helping-users-or-something-else-completely.md)
+* [What Roman Technological Feats And Achievements Had Been Rediscovered By Europeans At The Beginning Of The Late Middle Ages?](2014/what-roman-technological-feats-and-achievements-had-been-rediscovered-by-europeans-at-the-beginning-of-the-late-middle-ages.md)
+* [What Was The First Form Of Taxes And How Was Public Perception Of It At That Time?](2014/what-was-the-first-form-of-taxes-and-how-was-public-perception-of-it-at-that-time.md)
+* [What Was The Level Of Literacy Among The People Of The Roman Empire First To Third Centuries Ad If Only The Wealthy Were Literate What Was The Point Of The Written Propaganda On The Ancient Monuments?](2014/what-was-the-level-of-literacy-among-the-people-of-the-roman-empire-first-to-third-centuries-ad-if-only-the-wealthy-were-literate-what-was-the-point-of-the-written-propaganda-on-the-ancient-monuments.md)
+* [What Were The Cultural Differences And Similarities Between Ancient Greece And Rome?](2014/what-were-the-cultural-differences-and-similarities-between-ancient-greece-and-rome.md)
+* [What Were The Legal Bases For The Powers Of The Roman Emperor?](2014/what-were-the-legal-bases-for-the-powers-of-the-roman-emperor.md)
+* [What Would Be The Best Empire To Live Under In Ancient Times?](2014/what-would-be-the-best-empire-to-live-under-in-ancient-times.md)
+* [What Would Happen If A Magical Community Were To Reveal Themselves In The 1990S?](2014/what-would-happen-if-a-magical-community-were-to-reveal-themselves-in-the-1990s.md)
+* [Where Can I Find A Good Source On Ancient Warfare?](2014/where-can-i-find-a-good-source-on-ancient-warfare.md)
+* [Where Can I Find Code Examples Of Video Games Developed In C?](2014/where-can-i-find-code-examples-of-video-games-developed-in-c.md)
+* [Where Do I Start Reading History If I Want To Know About Dynasties Rulers Kings And Kingdoms?](2014/where-do-i-start-reading-history-if-i-want-to-know-about-dynasties-rulers-kings-and-kingdoms.md)
+* [Which Ancient Civilization Region Of Civilization Or Empire Fascinates You The Most Why?](2014/which-ancient-civilization-region-of-civilization-or-empire-fascinates-you-the-most-why.md)
+* [Who Bungled The Seattle Monorail?](2014/who-bungled-the-seattle-monorail.md)
+* [Who Does The His In History Refer To God Or A Human?](2014/who-does-the-his-in-history-refer-to-god-or-a-human.md)
+* [Who Is Gilgamesh?](2014/who-is-gilgamesh.md)
+* [Who Was The Laziest Person In The History Of Mankind?](2014/who-was-the-laziest-person-in-the-history-of-mankind.md)
+* [Who Were The Greatest Roman Poets?](2014/who-were-the-greatest-roman-poets.md)
+* [Why Did Rome Destroy Carthage?](2014/why-did-rome-destroy-carthage.md)
+* [Why Do Archeologists Think That The Trojan War Happened?](2014/why-do-archeologists-think-that-the-trojan-war-happened.md)
+* [Why Is There A Lack Of Biographical Descriptions Of Historical Figures?](2014/why-is-there-a-lack-of-biographical-descriptions-of-historical-figures.md)
+* [Why Were The Greeks Unable To Resist The Invasion By The Romans?](2014/why-were-the-greeks-unable-to-resist-the-invasion-by-the-romans.md)
